# NeoRPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: NeoRPC.cpp  NeoRPC.h  Version.h.in  main.cpp
src/core/: CompileCommands.h  NeoRPCCommandProvider.h
